--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,20 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.17.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>6.9.7.1</version>
+        </dependency>
+
+        <!-- Vulnerability fix: commons-codec:1.15 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
     </dependencies>
 
 </project>
